# simple_login

./: .pre-commit-config.yaml  pyproject.toml
pastebin/: db.sqlite3  manage.py
pastebin/pastebin/: settings.py  urls.py
pastebin/posts/: models.py  serializers.py  urls.py  views.py
pastebin/posts/migrations/: 0001_initial.py
pastebin/templates/: index.html
pastebin/users/: urls.py  views.py
